change configuration of pom.xml and app.java to work only with my own list, not with the graph visualization libary